--- a/src/main/resources/com/example/lab3/hello-view.fxml
+++ b/src/main/resources/com/example/lab3/hello-view.fxml
@@ -1,16 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.lab3.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<VBox alignment="CENTER" prefHeight="329.0" prefWidth="367.0" spacing="20.0" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.lab3.HelloController">
+    <children>
+        <HBox prefHeight="246.0" prefWidth="425.0">
+            <children>
+                <TableView fx:id="tab" prefHeight="246.0" prefWidth="369.0">
+                    <columns>
+                        <TableColumn fx:id="kol_id" prefWidth="75.0" text="Id" />
+                        <TableColumn prefWidth="251.0" text="Dane">
+                            <columns>
+                                <TableColumn fx:id="kol_imie" prefWidth="75.0" text="Imie" />
+                                <TableColumn fx:id="kol_nazwisko" prefWidth="75.0" text="Nazwisko" />
+                            </columns>
+                        </TableColumn>
+                    </columns>
+                </TableView>
+            </children>
+        </HBox>
+        <HBox prefHeight="100.0" prefWidth="200.0">
+            <children>
+                <TextField fx:id="inImie">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
+                </TextField>
+                <TextField fx:id="inNazwisko">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
+                </TextField>
+                <Button mnemonicParsing="false" onAction="#OsobaDodaj" text="Dodaj">
+                    <padding>
+                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                    </padding>
+                    <HBox.margin>
+                        <Insets top="10.0" />
+                    </HBox.margin>
+                </Button>
+            </children>
+        </HBox>
+    </children>
 </VBox>
